@@ -4,37 +4,37 @@ import org.junit.Test;
 public class MaximumNumberTest {
     @Test
     public void given3NumberWillReturnGreaterNumberAmong3() {
-        Integer maxNumber = MaximumNumber.findMaximum(6,8,9);
-        Assert.assertEquals(new Integer(9),maxNumber);
+        MaximumNumber<Integer> maximumNumber1 = new MaximumNumber<>(5, 3, 6, 8, 5, 2, 7, 5, 9);
+        Assert.assertEquals(new Integer(9),maximumNumber1.findMaximum());
 
-        Integer maxNumber1 = MaximumNumber.findMaximum(6,10,2);
-        Assert.assertEquals(new Integer(10),maxNumber1);
+        MaximumNumber<Integer> maximumNumber2 = new MaximumNumber<>(5, 3, 10, 8, 5, 2, 7, 5, 9);
+        Assert.assertEquals(new Integer(10),maximumNumber2.findMaximum());
 
-        Integer maxNumber2 = MaximumNumber.findMaximum(6,8,19);
-        Assert.assertEquals(Integer.valueOf(19),maxNumber2);
+        MaximumNumber<Integer> maximumNumber3 = new MaximumNumber<>(15, 3, 6, 8, 5, 2, 7, 5, 9);
+        Assert.assertEquals(new Integer(15),maximumNumber3.findMaximum());
    }
 
     @Test
     public void given3FloatNumberWillReturnGreaterNumberAmong3() {
-        Double doubleNumber = MaximumNumber.findMaximum(1.1, 2.2, 3.2);
-        Assert.assertEquals(new Double(3.2),doubleNumber);
+        MaximumNumber<Double> maximumNumber1 = new MaximumNumber<>(15.0, 3.3, 6.2, 8.2, 5.9, 2.6, 7.1, 5.3, 9.5);
+        Assert.assertEquals(new Double(15.0),maximumNumber1.findMaximum());
 
-        Double doubleNumber1 = MaximumNumber.findMaximum(3.2, 2.2, 1.1);
-        Assert.assertEquals(new Double(3.2),doubleNumber1);
+        MaximumNumber<Double> maximumNumber2 = new MaximumNumber<>(15.0, 30.3, 6.2, 8.2, 5.9, 2.6, 7.1, 5.3, 9.5);
+        Assert.assertEquals(new Double(30.3),maximumNumber2.findMaximum());
 
-        Double doubleNumber2 = MaximumNumber.findMaximum(1.1, 3.2, 3.2);
-        Assert.assertEquals(new Double(3.2),doubleNumber2);
+        MaximumNumber<Double> maximumNumber3 = new MaximumNumber<>(15.0, 3.3, 6.2, 8.2, 51.9, 2.6, 7.1, 5.3, 9.5);
+        Assert.assertEquals(new Double(51.9),maximumNumber3.findMaximum());
     }
 
     @Test
     public void given3StringWillReturnGreaterStringAmong3() {
-        String maxString = MaximumNumber.findMaximum("akshay", "suraj", "zafar");
-        Assert.assertEquals("zafar",maxString);
+        MaximumNumber<String> maximum1 = new MaximumNumber<>("zafar", "suraj", "akshay", "rupali", "rohan");
+        Assert.assertEquals("zafar",maximum1.findMaximum());
 
-        String maxString1 = MaximumNumber.findMaximum("zafar", "suraj", "akshay");
-        Assert.assertEquals("zafar",maxString1);
+        MaximumNumber<String> maximum2 = new MaximumNumber<>("akshay", "suraj", "zafar", "rupali", "rohan");
+        Assert.assertEquals("zafar",maximum2.findMaximum());
 
-        String maxString2 = MaximumNumber.findMaximum("akshay", "zafar", "suraj");
-        Assert.assertEquals("zafar",maxString2);
+        MaximumNumber<String> maximum3 = new MaximumNumber<>("rohan", "suraj", "akshay", "rupali", "zafar");
+        Assert.assertEquals("zafar",maximum3.findMaximum());
     }
 }
